--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "node-spotify-api": "^1.0.7",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "request": "^2.81.0"
   },
   "devDependencies": {},
   "scripts": {
